Revise index.html with new content and layout
Updated the homepage with new content and layout adjustments.

--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
         <div class="col-12">
           <h2 id="site">About</h2>
           <p>くまぷに（のん）が気まぐれで作ったてきとーなサイトです。<br>
-            実験とかするかもしれませんが個人サイトってそういうもんでしょ！？<br>
-            お付き合いいただければ幸いです。
+            特に有益なこともないかと思いますが、お付き合いいただければ幸いです。<br>
           </p>
             <ul>
               <li><a href="books.html">頒布物一覧ページ</a> - 同人誌の紹介などに。</li>
@@ -111,8 +110,8 @@
         <div class="col-md-7">
           <h2 class="h2-c">What's new?</h2>
           <dl class="update">
-            <dt>2024.3.15</dt>
-            <dd>ホームページ作りました
+            <dt>2025.11.26</dt>
+            <dd>ホームページリニューアルしました
             </dd>
           </dl>
         </div>
@@ -263,3 +262,4 @@
 </body>
 
 </html>
+
